--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "chalk": "^4.1.2",
+    "hardhat": "^2.22.18",
     "web3": "^1.0.0-beta.35"
   },
   "dependencies": {
+    "@lacchain/gas-model-provider": "^1.2.1",
+    "@openzeppelin/contracts": "^5.2.0",
     "ethereumjs-tx": "^1.3.7",
+    "ethers": "^6.13.5",
     "solc": "0.6.3"
   }
 }
