--- a/package.json
+++ b/package.json
@@ -9,16 +9,31 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.8",
+    "@nomicfoundation/hardhat-ethers": "^3.0.8",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.10",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.12",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.13",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
+    "@types/chai": "^4.3.20",
+    "@types/mocha": "^10.0.10",
+    "chai": "^4.5.0",
     "chalk": "^4.1.2",
     "hardhat": "^2.22.18",
+    "hardhat-gas-reporter": "^1.0.10",
+    "solc": "^0.8.24",
+    "solidity-coverage": "^0.8.14",
+    "ts-node": "^10.9.2",
+    "typechain": "^8.3.2",
+    "typescript": "^5.8.2",
     "web3": "^1.0.0-beta.35"
   },
   "dependencies": {
     "@lacchain/gas-model-provider": "^1.2.1",
     "@openzeppelin/contracts": "^5.2.0",
     "ethereumjs-tx": "^1.3.7",
-    "ethers": "^6.13.5",
-    "solc": "0.6.3"
+    "ethers": "^6.13.5"
   }
 }
